@@ -1,64 +1,43 @@
 dnl  AMD64 mpn_mod_34lsub1 -- remainder modulo 2^48-1.
 
-dnl  Copyright 2000, 2001, 2002, 2004, 2005, 2007 Free Software Foundation,
-dnl  Inc.
-dnl
+dnl  Copyright 2000, 2001, 2002, 2004, 2005, 2007, 2009, 2010 Free Software
+dnl  Foundation, Inc.
+
 dnl  This file is part of the GNU MP Library.
-dnl
-dnl  The GNU MP Library is free software; you can redistribute it and/or
-dnl  modify it under the terms of the GNU Lesser General Public License as
-dnl  published by the Free Software Foundation; either version 3 of the
-dnl  License, or (at your option) any later version.
-dnl
-dnl  The GNU MP Library is distributed in the hope that it will be useful,
-dnl  but WITHOUT ANY WARRANTY; without even the implied warranty of
-dnl  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
-dnl  Lesser General Public License for more details.
-dnl
+
+dnl  The GNU MP Library is free software; you can redistribute it and/or modify
+dnl  it under the terms of the GNU Lesser General Public License as published
+dnl  by the Free Software Foundation; either version 3 of the License, or (at
+dnl  your option) any later version.
+
+dnl  The GNU MP Library is distributed in the hope that it will be useful, but
+dnl  WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
+dnl  or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU Lesser General Public
+dnl  License for more details.
+
 dnl  You should have received a copy of the GNU Lesser General Public License
 dnl  along with the GNU MP Library.  If not, see http://www.gnu.org/licenses/.
 
 include(`../config.m4')
 
 
-C	     cycles/limb
-C AMD K8,K9	 1.0
-C AMD K10	 1.12
-C Intel P4	 3.25
-C Intel core2	 1.5
-C Intel corei	 1.5
+C	    cycles/limb
+C AMD K8,K9	 0.67	   0.583 is possible with zero-reg instead of $0, 4-way
+C AMD K10	 0.67	   this seems hard to beat
+C Intel P4	 7.35	   terrible, use old code
+C Intel core2	 1.25	   1+epsilon with huge unrolling
+C Intel corei	 1.15	   this seems hard to beat
 C Intel atom	 2.5
-C VIA nano	 1.75
-
+C VIA nano	 1.25	   this seems hard to beat
 
 C INPUT PARAMETERS
-C up	rdi
-C n	rsi
+define(`ap',	%rdi)
+define(`n',	%rsi)
 
 C mp_limb_t mpn_mod_34lsub1 (mp_srcptr up, mp_size_t n)
 
 C TODO
-C  * Apply the movzwl tricks to the x86/k7 code
-C  * Review feed-in and wind-down code.  In particular, try to avoid adc and
-C    sbb to placate Pentium4.
-C  * More unrolling and/or index addressing could bring time to under 1 c/l
-C    for Athlon64, approaching 0.67 c/l seems possible.
-C  * There are recurrencies on the carry registers (r8, r9, r10) that might
-C    be the limiting factor for the Pentium4 speed.  Splitting these into 6
-C    registers would help.
-C  * For ultimate Athlon64 performance, a sequence like this might be best.
-C    It should reach 0.5 c/l (limited by L1 cache bandwidth).
-C
-C	add	(%rdi), %rax
-C	adc	8(%rdi), %rcx
-C	adc	16(%rdi), %rdx
-C	adc	$0, %r8
-C	add	24(%rdi), %rax
-C	adc	32(%rdi), %rcx
-C	adc	40(%rdi), %rdx
-C	adc	$0, %r8
-C	...
-
+C  * Review feed-in and wind-down code.
 
 ASM_START()
 	TEXT
@@ -67,91 +46,125 @@ PROLOGUE(mpn_mod_34lsub1)
 
 	mov	$0x0000FFFFFFFFFFFF, %r11
 
-	sub	$2, %rsi
+	mov	(ap), %rax
+
+	cmp	$2, %rsi
 	ja	L(gt2)
 
-	mov	(%rdi), %rax
-	nop
-	jb	L(1)
+	jb,pt	L(one)
 
-	mov	8(%rdi), %rsi
+	mov	8(ap), %rsi
 	mov	%rax, %rdx
 	shr	$48, %rax		C src[0] low
 
 	and	%r11, %rdx		C src[0] high
 	add	%rdx, %rax
-	mov	%esi, %edx
+	mov	R32(%rsi), R32(%rdx)
 
 	shr	$32, %rsi		C src[1] high
 	add	%rsi, %rax
 
 	shl	$16, %rdx		C src[1] low
 	add	%rdx, %rax
+L(one):	ret
 
-L(1):	ret
 
+C Don't change this, the wind-down code is not able to handle greater values
+define(UNROLL,3)
 
-	ALIGN(16)
-L(gt2):	xor	%eax, %eax
-	xor	%ecx, %ecx
-	xor	%edx, %edx
-	xor	%r8, %r8
+L(gt2):	mov	8(ap), %rcx
+	mov	16(ap), %rdx
 	xor	%r9, %r9
-	xor	%r10, %r10
-
-L(top):	add	(%rdi), %rax
-	adc	$0, %r10
-	add	8(%rdi), %rcx
-	adc	$0, %r8
-	add	16(%rdi), %rdx
+	add	$24, ap
+	sub	$eval(UNROLL*3+3), %rsi
+	jc	L(end)
+	ALIGN(16)
+L(top):
+	add	(ap), %rax
+	adc	8(ap), %rcx
+	adc	16(ap), %rdx
 	adc	$0, %r9
-
-	sub	$3,%rsi
-	jng	L(end)
-
-	add	24(%rdi), %rax
-	adc	$0, %r10
-	add	32(%rdi), %rcx
-	adc	$0, %r8
-	add	40(%rdi), %rdx
-	lea	48(%rdi), %rdi
+forloop(i,1,UNROLL-1,`dnl
+	add	eval(i*24)(ap), %rax
+	adc	eval(i*24+8)(ap), %rcx
+	adc	eval(i*24+16)(ap), %rdx
 	adc	$0, %r9
+')dnl
+	add	$eval(UNROLL*24), ap
+	sub	$eval(UNROLL*3), %rsi
+	jnc	L(top)
 
-	sub	$3,%rsi
-	jg	L(top)
+L(end):	LEA(	L(tab), %r8)
+	movslq	36(%r8,%rsi,4), %r10
+	lea	(%r10, %r8), %r8
+	jmp	*%r8
 
+	RODATA
+L(tab):	.long	L(0)-L(tab)
+	.long	L(1)-L(tab)
+	.long	L(2)-L(tab)
+	.long	L(3)-L(tab)
+	.long	L(4)-L(tab)
+	.long	L(5)-L(tab)
+	.long	L(6)-L(tab)
+	.long	L(7)-L(tab)
+	.long	L(8)-L(tab)
 
-	add	$-24, %rdi
-L(end):	add	%r9, %rax
-	adc	%r10, %rcx
-	adc	%r8, %rdx
+	TEXT
+L(6):	add	(ap), %rax
+	adc	8(ap), %rcx
+	adc	16(ap), %rdx
+	adc	$0, %r9
+	add	$24, ap
+L(3):	add	(ap), %rax
+	adc	8(ap), %rcx
+	adc	16(ap), %rdx
+	jmp	L(cj1)
 
-	inc	%rsi
-	mov	$0x1, %r10d
-	js	L(combine)
+L(7):	add	(ap), %rax
+	adc	8(ap), %rcx
+	adc	16(ap), %rdx
+	adc	$0, %r9
+	add	$24, ap
+L(4):	add	(ap), %rax
+	adc	8(ap), %rcx
+	adc	16(ap), %rdx
+	adc	$0, %r9
+	add	$24, ap
+L(1):	add	(ap), %rax
+	adc	$0, %rcx
+	jmp	L(cj2)
 
-	mov	$0x10000, %r10d
-	adc	24(%rdi), %rax
-	dec	%rsi
-	js	L(combine)
+L(8):	add	(ap), %rax
+	adc	8(ap), %rcx
+	adc	16(ap), %rdx
+	adc	$0, %r9
+	add	$24, ap
+L(5):	add	(ap), %rax
+	adc	8(ap), %rcx
+	adc	16(ap), %rdx
+	adc	$0, %r9
+	add	$24, ap
+L(2):	add	(ap), %rax
+	adc	8(ap), %rcx
 
-	adc	32(%rdi), %rcx
-	mov	$0x100000000, %r10
+L(cj2):	adc	$0, %rdx
+L(cj1):	adc	$0, %r9
+L(0):	add	%r9, %rax
+	adc	$0, %rcx
+	adc	$0, %rdx
+	adc	$0, %rax
 
-L(combine):
-	sbb	%rsi, %rsi		C carry
 	mov	%rax, %rdi		C 0mod3
 	shr	$48, %rax		C 0mod3 high
 
-	and	%r10, %rsi		C carry masked
 	and	%r11, %rdi		C 0mod3 low
-	mov	%ecx, %r10d		C 1mod3
+	mov	R32(%rcx), R32(%r10)	C 1mod3
 
-	add	%rsi, %rax		C apply carry
 	shr	$32, %rcx		C 1mod3 high
 
 	add	%rdi, %rax		C apply 0mod3 low
-	movzwl	%dx, %edi		C 2mod3
+	movzwl	%dx, R32(%rdi)		C 2mod3
 	shl	$16, %r10		C 1mod3 low
 
 	add	%rcx, %rax		C apply 1mod3 high
